--- a/App_LocalResources/View.ascx.resx
+++ b/App_LocalResources/View.ascx.resx
@@ -321,4 +321,7 @@
   <data name="lblEmailRegex.Text" xml:space="preserve">
     <value />
   </data>
+  <data name="Error_Unknown.Text" xml:space="preserve">
+    <value>The data you provided is not valid. Please review and try again</value>
+  </data>
 </root>
